# trace-skeleton

./: .gitignore  Makefile  README.md  pyproject.toml  setup.py  test.py  trace_skeleton.c
.github/workflows/: python-publish.yml
