[build-system]
requires = ["setuptools>=59.6"]
build-backend = "setuptools.build_meta"

[project]
name = "trace_skeleton"
version = "0.1.6"
authors = [
  { name="Imad Toubal", email="imad.toubal@gmail.com" },
]
description = "Trace and label skeleton of a 2D image."
readme = "README.md"
requires-python = ">=3.6"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/imadtoubal/trace-skeleton"
"Bug Tracker" = "https://github.com/imadtoubal/trace-skeleton/issues"
